--- a/produktliste.html
+++ b/produktliste.html
@@ -15,6 +15,35 @@
     </header>
     <main>
       <div class="product_list_container">
+        <!-- <div class="product_card">
+          <a href="produkt.html">
+            <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="t-shirt" />
+          </a>
+          <p class="product_description">Sahara Team India Fanwear Round Neck Jersey</p>
+          <p class="product_price">DKK 895</p>
+        </div>
+        <div class="product_card">
+          <a href="produkt.html">
+            <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="t-shirt" />
+          </a>
+          <p class="product_description">Blue T20 Indian Cricket Jersey</p>
+          <p class="product_price">DKK 1595</p>
+        </div>
+        <div class="product_card">
+          <a href="produkt.html">
+            <img src="https://kea-alt-del.dk/t7/images/webp/640/1529.webp" alt="t-shirt" />
+          </a>
+          <p class="product_description">Tee</p>
+          <p class="product_price">DKK 1899</p>
+        </div>
+        <div class="product_card">
+          <a href="produkt.html">
+            <img src="https://kea-alt-del.dk/t7/images/webp/640/1528.webp" alt="sko" />
+          </a>
+          <p class="product_description">Black Fleece Jacket</p>
+          <p class="product_price">DKK 3999</p>
+        </div> -->
+        <!-- kopi af billederene
         <div class="product_card">
           <a href="produkt.html">
             <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="t-shirt" />
@@ -42,36 +71,7 @@
           </a>
           <p class="product_description">Black Fleece Jacket</p>
           <p class="product_price">DKK 3999</p>
-        </div>
-        <!-- kopi af billederene -->
-        <div class="product_card">
-          <a href="produkt.html">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="t-shirt" />
-          </a>
-          <p class="product_description">Sahara Team India Fanwear Round Neck Jersey</p>
-          <p class="product_price">DKK 895</p>
-        </div>
-        <div class="product_card">
-          <a href="produkt.html">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="t-shirt" />
-          </a>
-          <p class="product_description">Blue T20 Indian Cricket Jersey</p>
-          <p class="product_price">DKK 1595</p>
-        </div>
-        <div class="product_card">
-          <a href="produkt.html">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1529.webp" alt="t-shirt" />
-          </a>
-          <p class="product_description">Tee</p>
-          <p class="product_price">DKK 1899</p>
-        </div>
-        <div class="product_card">
-          <a href="produkt.html">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1528.webp" alt="sko" />
-          </a>
-          <p class="product_description">Black Fleece Jacket</p>
-          <p class="product_price">DKK 3999</p>
-        </div>
+        </div> -->
       </div>
     </main>
     <footer>
@@ -81,5 +81,7 @@
         <div class="footer_item">BRUG FOR HJÆLP</div>
       </div>
     </footer>
+
+    <script src="list.js"></script>
   </body>
 </html>
