--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="produkt.html" />
     <link rel="stylesheet" href="produktliste.html" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Forside</title>
   </head>
   <body>
@@ -18,12 +19,12 @@
       <section class="category_list_container">
         <h2>Categories</h2>
         <div class="category_grid">
-          <div class="category_box"><a href="produktliste.html">Accessories</a></div>
-          <div class="category_box"><a href="produktliste.html">Apparel</a></div>
+          <!-- <div class="category_box"><a href="produktliste.html">Accessories</a></div> -->
+          <!-- <div class="category_box"><a href="produktliste.html">Apparel</a></div>
           <div class="category_box"><a href="produktliste.html">Footwear</a></div>
           <div class="category_box"><a href="produktliste.html">Free Items</a></div>
           <div class="category_box"><a href="produktliste.html">Personal Care</a></div>
-          <div class="category_box"><a href="produktliste.html">sporting Goods</a></div>
+          <div class="category_box"><a href="produktliste.html">sporting Goods</a></div> -->
         </div>
       </section>
     </main>
@@ -34,5 +35,6 @@
         <div class="footer_item">BRUG FOR HJÆLP</div>
       </div>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
