--- a/produkt.html
+++ b/produkt.html
@@ -37,5 +37,6 @@
         <div class="footer_item">BRUG FOR HJÆLP</div>
       </div>
     </footer>
+    <script src="produkt.js" defer></script>
   </body>
 </html>
