--- a/produkt.html
+++ b/produkt.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="index.html" />
     <link rel="stylesheet" href="produktliste.html" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" />
     <title>Produkt</title>
   </head>
   <body>
@@ -16,7 +19,7 @@
     </header>
     <main>
       <div class="product_container">
-        <div class="product">
+        <!-- <div class="product">
           <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="t-shirt" />
         </div>
         <div class="info">
@@ -26,8 +29,9 @@
           <h3>color</h3>
           <p>Blue</p>
           <p></p>
-          <p class="basket">Add to basket</p>
-        </div>
+          <p class="pris">pris</p>
+          <p class="basket">Add to basket</p> -->
+        <!-- </div> -->
       </div>
     </main>
     <footer>
