--- a/produktliste.html
+++ b/produktliste.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.html" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" />
     <title>produktliste</title>
   </head>
   <body>
@@ -14,6 +17,7 @@
       </div>
     </header>
     <main>
+      <h1>hej</h1>
       <div class="product_list_container">
         <!-- <div class="product_card">
           <a href="produkt.html">
